[package]
name = "memfd-exec"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Run an executable directly from memory with a friendly interface."
repository = "https://github.com/novafacing/memfd-exec.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tempfile = "3.2.0"
reqwest = { version = "0.11.6", features = ["blocking"] }

[dependencies]
nix = "0.25.0"
libc = "0.2.134"
