[package]
name = "memfd-exec"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Run an executable directly from memory with a friendly interface."
repository = "https://github.com/novafacing/memfd-exec.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tempfile = "3.5.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
serial_test = "2.0.0"

[dependencies]
nix = "0.26.2"
libc = "0.2.154"
